--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   vector_math: ^2.1.2
-  image:
-    git: https://github.com/brendan-duncan/image.git
+  image: ^4.0.15
+
 
 dev_dependencies:
   flutter_test:
